import java.awt.*;

public class Player extends Rectangle implements Shape{

    public Player() {
        super();

    }

    public int addAccessory() {
        return 50;
    }

    public Color addColour() {
        return null;
    }


}
