@startuml
'https://plantuml.com/class-diagram




abstract class Rectangle {
    -WIDTH: int
    -HEIGHT: int
    -x: int
    -y: int
    -area: int
    -moving: boolean

    +int getX()
    +int getY()
    +boolean contains()
    +boolean getMovingObstacle()
    +void setMovingObstacle(moving: boolean)
    +void setLocation(int: x; int: y)
    +void draw(g: Graphics2D)
    +Color {abstract} addColour()
    +int {abstract} addAccessory()

}
class Square {
    +side: int

}

class Player {


}

class Obstacle {
   -R: int
   -G: int
   -B: int

   +void draw(g: Graphics2D)
}


Rectangle <|-- Square
Square <|-- Obstacle
Rectangle <|-- Player




@enduml